se edito testimonios y servicios

--- a/index.html
+++ b/index.html
@@ -637,12 +637,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>"Trabajar con Alejandra fue una experiencia increíble. Desarrolló una página web responsiva para nuestra institución educativa que no solo cumplió con nuestras expectativas, sino que las superó. Su atención al detalle y su capacidad para entender nuestras necesidades fueron clave para el éxito del proyecto. ¡Lo recomiendo ampliamente!"
+                  </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Simón Montoya</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Juan Lopez</h3>
+                <h4>Institución Educativa San Peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -650,12 +651,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>"Necesitábamos una base de datos robusta para gestionar la información de nuestros estudiantes. (nombre) no solo diseñó una solución personalizada con SQL, sino que también nos brindó asesoría técnica para optimizar su uso. Su profesionalismo y expertise son inigualables."
+                  </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>liney Carvajal</h3>
-                <h4>Designer</h4>
+                <h3>Jorge Iván Grisales Marín</h3>
+                <h4>Institución Educativa CESDE</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -663,12 +665,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>"Contraté a (nombre)  para una asesoría técnica en uno de nuestros proyectos de desarrollo web. Su capacidad para identificar áreas de mejora y proponer soluciones innovadoras fue invaluable. Además, su enfoque en metodologías ágiles nos ayudó a optimizar nuestros procesos. ¡Un profesional excepcional!"</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Santiago Garcia</h3>
-                <h4>Store Owner</h4>
+                <h3> Edwin Infante</h3>
+                <h4> Director Institución Educativa San Peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -676,12 +678,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>"Nos ayudo a implementar un Chatbot basado en inteligencia artificial para nuestro sistema de atención al clienter. Su conocimiento en Python y tecnologias de IA como GPT-4 fue fundamental para crear una solución eficiente y estable. ¡ el Chatbot ha mejorado significativamente nuestra interacción con los usuarios!"</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3> Andrés Jimenez</h3>
+                <h4>CESDE</h4>
               </div>
             </div><!-- End testimonial item -->
 
