se edito testimonios y servicios

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">Creación de paginas web</a></h4>
-              <p class="description">diseño y desarrolo de sitios web a medida, adaptados a las necesidades de tu negocio desde paginas informativas hasta plataformas interativas y reponsivas</p>
+              <p class="description">diseño y desarrolo de sitios web a medida, adaptados a las necesidades de tu negocio desde paginas informativas hasta plataformas interativas y reponsivas.</p>
             </div>
           </div>
           <!-- End Service Item -->
@@ -583,8 +583,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Desarrollo de </a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="service-details.html" class="stretched-link">Desarrollo de Chatbot IA </a></h4>
+              <p class="description">Creación de sistemas inteligentes que prosesen datos, automaticen decisiones o generen predicciones utiles para el negosio.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -651,7 +651,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>"Necesitábamos una base de datos robusta para gestionar la información de nuestros estudiantes. (nombre) no solo diseñó una solución personalizada con SQL, sino que también nos brindó asesoría técnica para optimizar su uso. Su profesionalismo y expertise son inigualables."
+                  <span>"Necesitábamos una base de datos robusta para gestionar la información de nuestros estudiantes. Alejandra no solo diseñó una solución personalizada con SQL, sino que también nos brindó asesoría técnica para optimizar su uso. Su profesionalismo y expertise son inigualables."
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
@@ -665,7 +665,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>"Contraté a (nombre)  para una asesoría técnica en uno de nuestros proyectos de desarrollo web. Su capacidad para identificar áreas de mejora y proponer soluciones innovadoras fue invaluable. Además, su enfoque en metodologías ágiles nos ayudó a optimizar nuestros procesos. ¡Un profesional excepcional!"</span>
+                  <span>"Contraté a Alejandra para una asesoría técnica en uno de nuestros proyectos de desarrollo web. Su capacidad para identificar áreas de mejora y proponer soluciones innovadoras fue invaluable. Además, su enfoque en metodologías ágiles nos ayudó a optimizar nuestros procesos. ¡Un profesional excepcional!"                                            </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -691,12 +691,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>" Alejandra colaboró con nuestro equipo en el desarrollo de una aplicación web full stack. Su dominio de tecnologías como Node.js, JavaScript y AWS fue impresionante. Además, su actitud colaborativa y su compromiso con los plazos hicieron que el proyecto fuera un éxito. ¡Sin duda lo volvería a contratar!"                                        "</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>yenifer Blandón</h3>
-                <h4>Entrepreneur</h4>
+                <h3>giroplay sas</h3>
+                <h4>Empresa de Software</h4>
               </div>
             </div><!-- End testimonial item -->
 
